# the-hive

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.mcp  pyproject.mcp.toml
docs/: MCP_SERVER.md
src/: main.py
src/mcp_server/: __init__.py  config.py  server.py
src/mcp_server/tools/: __init__.py  example_tools.py  tool_template.py
src/mcp_server/transport/: __init__.py  http_server.py
src/tools/: piper_speak.py
src/tools/piper_resources/: test.txt
